--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
     "react-swipeable-views": "0.13.9",
-    "serve": "11.3.2",
+    "serve": "11.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
